--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,40 +1,40 @@
 [plugins]
 sponge-gradle-plugin = { id = "org.spongepowered.gradle.plugin", version.ref = "sponge-gradle" }
 sponge-gradle-ore = { id = "org.spongepowered.gradle.ore", version.ref = "sponge-gradle" }
-run-paper = { id = "xyz.jpenilla.run-paper", version = "2.2.4" }
+run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.0" }
 hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.2" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.14" }
 
 [versions]
-minecraft = "1.20.4"
+minecraft = "1.20.6"
 checkerQual = "3.42.0"
-cloud = "2.0.0-beta.4"
-cloudMinecraft = "2.0.0-beta.5"
+cloud = "2.0.0-beta.5"
+cloudMinecraft = "2.0.0-SNAPSHOT"
 cloudProcessors = "1.0.0-beta.2"
-cloudModded = "2.0.0-beta.4"
+cloudModded = "2.0.0-SNAPSHOT"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
-adventure = "4.16.0"
+adventure = "4.17.0-SNAPSHOT"
 examination = "1.3.0"
 option = "1.0.0"
-adventurePlatformFabric = "5.12.0"
+adventurePlatformFabric = "5.13.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.0.2"
-fabricApi = "0.97.0+1.20.4"
+fabricApi = "0.97.8+1.20.6"
 fabricLoader = "0.15.10"
-cardinalComponents = "5.4.0"
+cardinalComponents = "6.0.0-beta.3"
 guice = "7.0.0"
-neoforge = "20.4.232"
+neoforge = "20.6.7-beta"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
 indra = "3.1.3"
 sponge-gradle = "2.2.0"
-shadow = "8.1.1"
+shadow = "8.1.7"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.5.1"
 loom = "1.6-SNAPSHOT"
-paperweight = "1.5.15"
+paperweight = "1.7.0"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
@@ -88,15 +88,15 @@ fabricLoader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "
 
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
 
-cardinalComponentsBase = { group = "dev.onyxstudios.cardinal-components-api", name = "cardinal-components-base", version.ref = "cardinalComponents" }
-cardinalComponentsEntity = { group = "dev.onyxstudios.cardinal-components-api", name = "cardinal-components-entity", version.ref = "cardinalComponents" }
+cardinalComponentsBase = { group = "org.ladysnake.cardinal-components-api", name = "cardinal-components-base", version.ref = "cardinalComponents" }
+cardinalComponentsEntity = { group = "org.ladysnake.cardinal-components-api", name = "cardinal-components-entity", version.ref = "cardinalComponents" }
 
 neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
 
 # buildSrc
 indraCommon = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
 indraPublishingSonatype = { group = "net.kyori", name = "indra-publishing-sonatype", version.ref = "indra" }
-shadow = { group = "com.github.johnrengelman", name = "shadow", version.ref = "shadow" }
+shadow = { group = "io.github.goooler.shadow", name = "shadow-gradle-plugin", version.ref = "shadow" }
 vanillaGradle = { group = "org.spongepowered", name = "vanillagradle", version.ref = "vanillaGradle" }
 mod-publish-plugin = { module = "me.modmuss50:mod-publish-plugin", version.ref = "mod-publish-plugin" }
 loom = { group = "xyz.jpenilla", name = "quiet-architectury-loom", version.ref = "loom" }
