Make PNJ the default map image io backend
Configs with (effectively) default image io settings will be switched to use PNJ. Otherwise, they will continue to use BufferedImage.

Some basic testing shows that PNJ gives compression near the max setting for BufferedImage while taking less time.

The following results are for rendering the same map twice in a row (after a warmup run) averaged over a couple of runs (time), and for the whole tiles directory for the dimension (size). Time is what was spent in `MapImage#save` on the image io thread as measured by spark (async profiler).

PNJ                                            : 724K in 1400ms
BufferedImage compress-images=enabled, value=1 : 712K in 2300ms
BufferedImage compress-images=disabled         : 804K in 950ms

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -93,6 +93,8 @@ cardinalComponentsEntity = { group = "org.ladysnake.cardinal-components-api", na
 
 neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
 
+pnj = "io.github.xfacthd:pnj:1.2"
+
 # buildSrc
 indraCommon = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
 indraPublishingSonatype = { group = "net.kyori", name = "indra-publishing-sonatype", version.ref = "indra" }
