--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.2" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.15" }
 
 [versions]
-minecraft = "1.21.2"
+minecraft = "1.21.3"
 checkerQual = "3.48.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -20,11 +20,11 @@ option = "1.0.0"
 adventurePlatformMod = "6.1.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.106.1+1.21.2"
+fabricApi = "0.106.1+1.21.3"
 fabricLoader = "0.16.7"
 cardinalComponents = "6.1.1"
 guice = "7.0.0"
-neoforge = "21.2.0-beta"
+neoforge = "21.3.0-beta"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
@@ -33,7 +33,7 @@ sponge-gradle = "2.2.0"
 shadow = "8.3.0"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.7.4"
-loom = "1.7.298"
+loom = "1.7-SNAPSHOT"
 paperweight = "1.7.3"
 
 [libraries]
