--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ configurate = "4.1.2"
 adventure = "4.17.0"
 examination = "1.3.0"
 option = "1.0.0"
-adventurePlatformMod = "6.1.0-SNAPSHOT"
+adventurePlatformMod = "6.1.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
 fabricApi = "0.107.0+1.21.3"
