--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.2" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.15" }
 
 [versions]
-minecraft = "1.21.1"
+minecraft = "1.21.3"
 checkerQual = "3.48.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -17,14 +17,14 @@ configurate = "4.1.2"
 adventure = "4.17.0"
 examination = "1.3.0"
 option = "1.0.0"
-adventurePlatformFabric = "5.14.1"
+adventurePlatformMod = "6.1.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.105.0+1.21.1"
+fabricApi = "0.107.0+1.21.3"
 fabricLoader = "0.16.7"
-cardinalComponents = "6.1.1"
+cardinalComponents = "6.2.0"
 guice = "7.0.0"
-neoforge = "21.1.68"
+neoforge = "21.3.3-beta"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
@@ -34,7 +34,7 @@ shadow = "8.3.0"
 vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.7.4"
 loom = "1.7-SNAPSHOT"
-paperweight = "1.7.3"
+paperweight = "1.7.4"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
@@ -46,7 +46,8 @@ adventureTextSerializerPlain = { group = "net.kyori", name = "adventure-text-ser
 adventureTextSerializerGson = { group = "net.kyori", name = "adventure-text-serializer-gson" }
 adventureTextSerializerJson = { group = "net.kyori", name = "adventure-text-serializer-json" }
 miniMessage = { group = "net.kyori", name = "adventure-text-minimessage" }
-adventurePlatformFabric = { group = "net.kyori", name = "adventure-platform-fabric", version.ref = "adventurePlatformFabric" }
+adventurePlatformFabric = { group = "net.kyori", name = "adventure-platform-fabric", version.ref = "adventurePlatformMod" }
+adventurePlatformNeoforge = { group = "net.kyori", name = "adventure-platform-neoforge", version.ref = "adventurePlatformMod" }
 adventureKey = { group = "net.kyori", name = "adventure-key" }
 examinationApi = { group = "net.kyori", name = "examination-api", version.ref = "examination" }
 examinationString = { group = "net.kyori", name = "examination-string", version.ref = "examination" }
