--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ checkerQual = "3.48.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
 cloudProcessors = "1.0.0-beta.3"
-cloudModded = "2.0.0-beta.9"
+cloudModded = "2.0.0-beta.10"
 cloudSponge = "2.0.0-SNAPSHOT"
 configurate = "4.1.2"
 adventure = "4.17.0"
@@ -86,6 +86,7 @@ mixin = { group = "org.spongepowered", name = "mixin", version = "0.8.5" }
 
 fabricApi = { group = "net.fabricmc.fabric-api", name = "fabric-api", version.ref = "fabricApi" }
 fabricLoader = { group = "net.fabricmc", name = "fabric-loader", version.ref = "fabricLoader" }
+fabricPermissionsApi = "me.lucko:fabric-permissions-api:0.3.3"
 
 minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft" }
 
