--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,16 +25,17 @@ fabricLoader = "0.16.9"
 cardinalComponents = "6.2.0"
 guice = "7.0.0"
 neoforge = "21.3.42-beta"
+neoform = "1.21.3-20241023.131943"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
 indra = "3.1.3"
 sponge-gradle = "2.2.0"
 shadow = "8.3.5"
-vanillaGradle = "0.2.1-SNAPSHOT"
 mod-publish-plugin = "0.8.1"
-loom = "1.7-SNAPSHOT"
-paperweight = "1.7.5"
+loom = "1.8-SNAPSHOT"
+mdg = "2.0.52-beta"
+paperweight = "1.7.6"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
@@ -93,15 +94,15 @@ minecraft = { group = "com.mojang", name = "minecraft", version.ref = "minecraft
 cardinalComponentsBase = { group = "org.ladysnake.cardinal-components-api", name = "cardinal-components-base", version.ref = "cardinalComponents" }
 cardinalComponentsEntity = { group = "org.ladysnake.cardinal-components-api", name = "cardinal-components-entity", version.ref = "cardinalComponents" }
 
-neoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
+zNeoforge = { group = "net.neoforged", name = "neoforge", version.ref = "neoforge" }
 
 # buildSrc
 indraCommon = { group = "net.kyori", name = "indra-common", version.ref = "indra" }
 indraPublishingSonatype = { group = "net.kyori", name = "indra-publishing-sonatype", version.ref = "indra" }
 shadow = { group = "com.gradleup.shadow", name = "shadow-gradle-plugin", version.ref = "shadow" }
-vanillaGradle = { group = "org.spongepowered", name = "vanillagradle", version.ref = "vanillaGradle" }
 mod-publish-plugin = { module = "me.modmuss50:mod-publish-plugin", version.ref = "mod-publish-plugin" }
-loom = { group = "xyz.jpenilla", name = "quiet-architectury-loom", version.ref = "loom" }
+loom = { module = "net.fabricmc:quiet-fabric-loom", version.ref = "loom" }
+mdg = { module = "net.neoforged:moddev-gradle", version.ref = "mdg" }
 paperweightUserdev = { group = "io.papermc.paperweight", name = "paperweight-userdev", version.ref = "paperweight" }
 
 [bundles]
