--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ fabricApi = "0.110.5+1.21.4"
 fabricLoader = "0.16.9"
 cardinalComponents = "6.2.0"
 guice = "7.0.0"
-neoforge = "21.4.0-beta"
+neoforge = "21.4.38-beta"
 neoform = "1.21.4-20241203.161809"
 htmlSanitizer = "20240325.1"
 
@@ -33,9 +33,9 @@ indra = "3.1.3"
 sponge-gradle = "2.2.0"
 shadow = "8.3.5"
 mod-publish-plugin = "0.8.4"
-loom = "1.8-SNAPSHOT"
-mdg = "2.0.52-beta"
-paperweight = "1.7.6"
+loom = "1.9-SNAPSHOT"
+mdg = "2.0.62-beta"
+paperweight = "2.0.0-beta.8"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
