--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,8 +34,8 @@ sponge-gradle = "2.3.0"
 shadow = "8.3.5"
 mod-publish-plugin = "0.8.4"
 loom = "1.9-SNAPSHOT"
-mdg = "2.0.62-beta"
-paperweight = "2.0.0-beta.9"
+mdg = "2.0.71"
+paperweight = "2.0.0-beta.11"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
