--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.3" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.16" }
 
 [versions]
-minecraft = "1.21.4"
+minecraft = "1.21.5"
 checkerQual = "3.48.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -20,12 +20,12 @@ option = "1.1.0"
 adventurePlatformMod = "6.3.0"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.119.2+1.21.4"
+fabricApi = "0.119.6+1.21.5"
 fabricLoader = "0.16.12"
 cardinalComponents = "6.2.2"
 guice = "7.0.0"
-neoforge = "21.4.123"
-neoform = "1.21.4-20241203.161809"
+neoforge = "21.5.24-beta"
+neoform = "1.21.5-20250325.162830"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
