--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ configurate = "4.2.0"
 adventure = "4.20.0"
 examination = "1.3.0"
 option = "1.1.0"
-adventurePlatformMod = "6.3.0"
+adventurePlatformMod = "6.4.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
 fabricApi = "0.120.0+1.21.5"
