--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ hangar-publish = { id = "io.papermc.hangar-publish-plugin", version = "0.1.3" }
 javadoc-links = { id = "org.incendo.cloud-build-logic.javadoc-links", version = "0.0.16" }
 
 [versions]
-minecraft = "1.21.4"
+minecraft = "1.21.5"
 checkerQual = "3.48.0"
 cloud = "2.0.0"
 cloudMinecraft = "2.0.0-beta.10"
@@ -17,15 +17,15 @@ configurate = "4.2.0"
 adventure = "4.20.0"
 examination = "1.3.0"
 option = "1.1.0"
-adventurePlatformMod = "6.3.0"
+adventurePlatformMod = "6.4.0-SNAPSHOT"
 paperApi = "1.20.2-R0.1-SNAPSHOT"
 bStats = "3.1.0"
-fabricApi = "0.119.2+1.21.4"
-fabricLoader = "0.16.12"
-cardinalComponents = "6.2.2"
+fabricApi = "0.120.0+1.21.5"
+fabricLoader = "0.16.14"
+cardinalComponents = "6.3.1"
 guice = "7.0.0"
-neoforge = "21.4.123"
-neoform = "1.21.4-20241203.161809"
+neoforge = "21.5.40-beta"
+neoform = "1.21.5-20250325.162830"
 htmlSanitizer = "20240325.1"
 
 # buildSrc
@@ -35,7 +35,7 @@ shadow = "8.3.6"
 mod-publish-plugin = "0.8.4"
 loom = "1.10-SNAPSHOT"
 mdg = "2.0.80"
-paperweight = "2.0.0-beta.14"
+paperweight = "2.0.0-beta.16"
 
 [libraries]
 guice = { group = "com.google.inject", name = "guice", version.ref = "guice" }
